# pel-lang

./: .bandit  .gitattributes  .gitignore  .gitmodules  .pelformat.toml  .pellint.toml  .pr2-tracking  .pr3-tracking  .pre-commit-config.yaml  .safety-policy.toml  AUTHORS  BEGINNER_TUTORIAL.md  BENCHMARK_STATUS.md  BUSINESS_REPORT.md  CLA-SIGNING.md  CLA.md  COMMAND_CHEATSHEET.md  COMMERCIAL-LICENSE.md  COMMERCIAL_LICENSE  COMPLETE_REMAINING_MODELS_PROMPT.md  COMPREHENSIVE_ASSESSMENT.md  COMPREHENSIVE_PR29_REVIEW.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  EXTENSIVE_MICROSOFT_GRADE_REVIEW_PR42.md  EXTENSIVE_MICROSOFT_REVIEW_PR29.md  FINAL_COMPREHENSIVE_MICROSOFT_REVIEW_PR29.md  FINAL_SUMMARY.md  GITHUB_ISSUES_CREATED.md  IMMEDIATE_FIXES_NEEDED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_FINAL.md  ISSUE_25_FINAL_SUMMARY.md  ISSUE_25_IMPLEMENTATION_COMPLETE.md  MICROSOFT_GRADE_REVIEW_PR29.md  Makefile  NOTICE  PEL_100_FIX_SUMMARY.json  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  (+49 more)
.github/: CI_MAINTENANCE.md  PR_TRACKING.md
.github/prompts/: continue.prompt.md  issuedesign.prompt.md  issueimplement.prompt.md  merge.prompt.md  msreview.prompt.md  nextpr.prompt.md  package.json  pr.prompt.md  prautoreview.prompt.md  prcreate.prompt.md  prdesign.prompt.md  primplement.prompt.md  prinstruct.prompt.md  prmerge.prompt.md  prreview.prompt.md  update-prompts.sh  updatepackages.prompt.md  yousuck.prompt.md
.github/workflows/: benchmarks.yml  ci.yml  language-eval.yml  test.yml  tutorial-qa.yml
.language-eval/: BASELINE_MANAGEMENT.md  CHANGELOG.md  FORMULA_DERIVATION.md  GLOSSARY.md  GOVERNANCE.md  README.md  RELEASE_READINESS.md  SCORECARD.md  WEIGHTS.default.json
.language-eval/WEIGHTS.templates/: data_ml.json  embedded.json  scripting.json  systems.json  web_backend.json
.language-eval/baselines/: baseline.example.json
.language-eval/schemas/: report.schema.json  results.schema.json  target.schema.json
.language-eval/scripts/: check_baseline_age.py  ci_gate.py  compare_baseline.py  emit_report.py  normalize_results.py  run_all.sh  run_suite.sh  scorecard.py  validate_baselines.py
.language-eval/targets/: example-target.yaml
.language-eval/templates/: ISSUE_TEMPLATE.new_target.md  PR_TEMPLATE.language_eval.md
beginner_examples/: README.md  coffee_results.json  coffee_shop.pel  hiring_plan.pel  hiring_results.json  run_all_examples.sh  saas_business.pel  saas_uncertain.pel  view_results.py
benchmarks/: PEL_100_RESULTS.json  PEL_100_RESULTS.md  README.md  score_benchmark.py
ci/: pipeline_model.yaml
compiler/: __init__.py  ast_nodes.py  compiler.py  errors.py  ir_generator.py  lexer.py  parser.py  provenance_checker.py  provenance_checker_old.py  semantic_contracts.py  typechecker.py  typechecker_old.py
contracts/: api.yaml  compiler_api.yaml  errors.yaml  events.yaml
demo/: README.md  quick_start.sh  report.html  report.md  results_deterministic.json  results_monte_carlo.json
docs/: MIGRATION_GUIDE.md  README.md  SEMANTIC_TYPE_SYSTEM_IMPLEMENTATION.md  STYLE_GUIDE.md  TESTING.md  language_eval_architecture.md  language_eval_architecture.mmd
docs/ci/: BRANCH_PROTECTION.md  MERGE_REQUIREMENTS.md  TROUBLESHOOTING.md  pipeline_model.yaml
docs/conformance/: CONFORMANCE_TESTING.md  TEST_CASE_FORMAT.md
docs/contracts/: compiler_api.yaml  errors.yaml
docs/data/: data_state_model.yaml
docs/delivery/: delivery_state_model.yaml
docs/model/: codebase_state_snapshot.md  codebase_state_snapshot.yaml  contracts_extracted.md  model_alignment_plan.md  system_state_model.yaml  test_traceability.yaml
docs/roadmap/: roadmap_model.yaml
docs/runtime/: RUNTIME_RELIABILITY.md
docs/stdlib/: cashflow_module_guide.md  retention_module_guide.md
docs/tutorials/: 02_economic_types.md  03_uncertainty_distributions.md  04_constraints_policies.md  05_provenance_governance.md  06_time_series_modeling.md  07_stdlib_functions.md  09_migration_spreadsheets.md  10_production_deployment.md  CONTRIBUTING.md  README.md  calibration.md  your_first_model_15min.md
editors/: README.md
editors/vscode/: .vscodeignore  README.md  package-lock.json  package.json
examples/: CALIBRATION_EXAMPLES.md  calibration_saas_churn.pel  calibration_saas_churn_config.yaml  calibration_saas_churn_data.csv  engineering_hiring.pel  manufacturing_capacity.pel  saas_operations.pel  saas_subscription.pel  saas_with_cashflow_retention.pel  simple_growth.pel
examples/semantic_contracts/: complete_saas_model.pel  duration_from_count.pel  fraction_from_ratio.pel  fraction_to_rate.pel  rate_normalization.pel  revenue_per_unit.pel  temporal_aggregation.pel
formatter/: README.md  __init__.py  config.py  formatter.py
hooks/: pre-commit
ir/: ir_validation_rules.md  pel_ir_schema.json
linter/: README.md  __init__.py  config.py  linter.py  reporter.py  rules.py  types.py
lsp/: README.md  __init__.py  server.py  test_lsp.py
ops/: metrics_catalog.yaml  slo.yaml
pel_cli/: __init__.py  main.py
perf/: budgets.yaml
release/: release_strategy.yaml
resilience/: failure_modes.yaml
runtime/: __init__.py  reporting.py  runtime.py  visualization.py
runtime/calibration/: README.md  __init__.py  calibrator.py  csv_connector.py  drift_detection.py  parameter_estimation.py
scripts/: check_conformance_cases.py  debug_conformance.py  pre-flight.sh  print_yaml_input.py  tag_v0.6.0.sh  tutorial_tracker.py  validate_tutorial_code.py
security/: rbac_matrix.yaml  threat_model.yaml
spec/: pel_benchmark_suite.md  pel_calibration_spec.md  pel_conformance_spec.md  pel_constraint_spec.md  pel_formal_semantics.md  pel_governance_spec.md  pel_language_spec.md  pel_policy_spec.md  pel_security_spec.md  pel_type_system.md  pel_uncertainty_spec.md  semantic_contracts_guide.md
stdlib/: README.md  __init__.py
stdlib/capacity/: README.md  capacity.pel
stdlib/cashflow/: README.md  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_calibration_integration.py  test_csv_connector.py  test_drift_detection.py  test_lexer.py  test_parameter_estimation.py  test_parser.py  test_performance.py
(+673 files in other folders)
