[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pel-lang"
version = "0.1.0"
description = "PEL: Programmable Economic Language - The first complete, formally specified, programmable language purpose-built for economic and business modeling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later OR Commercial"}
authors = [
    {name = "PEL Project Contributors", email = "davidtraversmailbox@gmail.com"}
]
maintainers = [
    {name = "David Travers", email = "davidtraversmailbox@gmail.com"}
]
keywords = [
    "economic-modeling",
    "financial-modeling",
    "business-modeling",
    "saas-metrics",
    "uncertainty",
    "dsl",
    "programming-language"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed"
]

dependencies = [
    # Add your runtime dependencies here as the project evolves
    # Example dependencies (uncomment and adjust as needed):
    # "numpy>=1.24.0",
    # "scipy>=1.10.0",
    # "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/pel-lang/pel"
Documentation = "https://github.com/pel-lang/pel/tree/main/spec"
Repository = "https://github.com/pel-lang/pel"
Issues = "https://github.com/pel-lang/pel/issues"
"Commercial License" = "https://github.com/pel-lang/pel/blob/main/COMMERCIAL-LICENSE.md"

[project.scripts]
pel = "runtime.runtime:main"

[tool.setuptools]
packages = ["compiler", "runtime", "stdlib"]
include-package-data = true

[tool.setuptools.package-data]
stdlib = ["**/*.pel"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E722",  # bare except (legacy code)
    "B017",  # assertRaises(Exception) (legacy code)
    "F403",  # star imports (used throughout codebase)
    "F405",  # may be undefined from star imports (used throughout codebase)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = [
    "compiler/.*_old\\.py$",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=compiler",
    "--cov=runtime",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["compiler", "runtime"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "compiler/*_old.py",
    "*/compiler/*_old.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
